[package]
name = "drand"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT or Apache 2.0"

[[bin]]
name = "rdrand"
path = "src/main.rs"

[dependencies]
tokio = "0.2.13"
tonic = "0.1.1"
structopt = "0.3.12"
home = "0.5.3"
humantime = "2.0.0"
lazy_static = "1.4.0"
anyhow = "1.0.27"
log = { version = "0.4.8", features = ["std"] }
ansi_term = "0.12.1"
unicode-segmentation = "1.6.0"
atty = "0.2.14"
url = { version = "2.1.1", features = ["serde"] }
paired = "0.18.0"
bls-signatures = "0.5.0"
rand = "0.7.3"
serde = { version = "1.0.105", features = ["derive"] }
hex = "0.4.2"
toml = "0.5.6"
