[package]
name = "drand"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT or Apache 2.0"

[[bin]]
name = "rdrand"
path = "src/main.rs"

[dependencies]
structopt = "0.3.12"
home = "0.5.3"
humantime = "2.0.0"
lazy_static = "1.4.0"
anyhow = "1.0.27"
log = { version = "0.4.8", features = ["std"] }
ansi_term = "0.12.1"
unicode-segmentation = "1.6.0"
atty = "0.2.14"
paired = "0.18.0"
bls-signatures = "0.5.0"
rand = "0.7.3"
serde = { version = "1.0.105", features = ["derive"] }
hex = "0.4.2"
toml = "0.5.6"
blake2b_simd = "0.5.10"
async-std = { version = "1.5.0", features = ["unstable"] }
futures = "0.3.4"

[dependencies.libp2p]
git = "https://github.com/libp2p/rust-libp2p"
rev = "0d3e4f205120f71bfb24b2d65b3d1be96751eef7"
features = [
    "deflate",
    "dns",
    "floodsub",
    "identify",
    # "kad",
    "gossipsub",
    "mdns",
    "mplex",
    "noise",
    "ping",
    # "plaintext",
    # "pnet",
    # "secio",
    # "secp256k1",
    "tcp",
    # "uds",
    # "wasm-ext",
    # "websocket",
    "yamux",
]

