[package]
name = "drand"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT or Apache 2.0"

[[bin]]
name = "rdrand"
path = "src/main.rs"

[dependencies]
structopt = "0.3.12"
home = "0.5.3"
humantime = "2.0.0"
lazy_static = "1.4.0"
anyhow = "1.0.27"
log = { version = "0.4.8", features = ["std"] }
ansi_term = "0.12.1"
unicode-segmentation = "1.6.0"
atty = "0.2.14"
paired = { version = "0.18.0", features = ["serde"] }
rand = "0.7.3"
serde = { version = "1.0.105", features = ["derive"] }
hex = "0.4.2"
toml = "0.5.6"
blake2b_simd = "0.5.10"
async-std = { version = "1.5.0", features = ["unstable"] }
futures = "0.3.4"
tide = "0.6.0"
surf = "2.0.0-alpha.0"
http-client = "1.1.1"
stop-token = "0.1.2"
serde_cbor = "0.11.1"
crossbeam = "0.7.3"
rand_xorshift = "0.2.0"

[dependencies.bls-signatures]
git = "https://github.com/filecoin-project/bls-signatures"
branch = "master"

[dependencies.threshold]
# git = "https://github.com/celo-org/celo-threshold-bls-rs"
git = "https://github.com/dignifiedquire/celo-threshold-bls-rs"
# branch = "master"
branch = "feat/serde"
default-features = false
features = ["bls12_381"]

[dependencies.libp2p]
version = "0.18"
features = [
    "deflate",
    "dns",
    "floodsub",
    "identify",
    # "kad",
    "gossipsub",
    "mdns",
    "mplex",
    "noise",
    "ping",
    # "plaintext",
    # "pnet",
    # "secio",
    # "secp256k1",
    "tcp",
    # "uds",
    # "wasm-ext",
    # "websocket",
    "yamux",
]


[dev-dependencies]
async-std = { version = "1.5.0", features = ["unstable", "attributes"] }
